--- a/view/Makefile
+++ b/view/Makefile
@@ -18,21 +18,21 @@ all: $(BINS)
 testGameView: testGameView.o testUtils.o GameView.o Map.o Places.o
 testGameView.o: testGameView.c GameView.h Map.h Places.h Game.h
 
-testHunterView: testHunterView.o testUtils.o HunterView.o GameView.o Map.o Places.o
-testHunterView.o: testHunterView.c HunterView.h GameView.h Map.h Places.h Game.h
+testHunterView: testHunterView.o testUtils.o HunterView.o GameView.o Map.o Places.o queue.o
+testHunterView.o: testHunterView.c HunterView.h GameView.h Map.h Places.h Game.h queue.c queue.h
 
 testDraculaView: testDraculaView.o testUtils.o DraculaView.o GameView.o Map.o Places.o
 testDraculaView.o: testDraculaView.c DraculaView.h GameView.h Map.h Places.h Game.h
 
-testMap: testMap.o Map.o Places.o
-testMap.o: testMap.c Map.h Places.h
+testMap: testMap.o Map.o Places.o 
+testMap.o: testMap.c Map.h Places.h 
 
 Places.o: Places.c Places.h Game.h
 Map.o: Map.c Map.h Places.h Game.h
-GameView.o:	GameView.c GameView.h Game.h
-HunterView.o: HunterView.c HunterView.h Game.h
+GameView.o:	GameView.c GameView.h Game.h 
+HunterView.o: HunterView.c HunterView.h Game.h queue.c queue.h
 DraculaView.o: DraculaView.c DraculaView.h Game.h
-testUtils.o: testUtils.c Places.h Game.h
+testUtils.o: testUtils.c Places.h Game.h 
 
 .PHONY: clean
 clean:
